# slang

./: Cargo.toml  README.md  ]  test.slang
benches/: benchmark.rs  fib_fast.slang  fib_recurse.slang  isprime.slang  multi_table.slang  while_loop_bench.slang  while_loop_bench_long.slang
src/: expression_eval.rs  lib.rs  main.rs  parser.rs  tests.rs
src/parser/: lexer.rs  mod.rs  parser.rs
tests/: basic_function.slang  break_condition_test.slang  elif.slang  fib_fast.slang  fib_recurse.slang  if_else_test.slang  if_test.slang  multi_table.slang  simple_fileread.slang  sqrt_loop_test.slang
